# qai-checker-mini

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: doc_a.md  doc_b.md  expected_sample.md
src/qai_checker_mini/: __init__.py  __main__.py  cli.py  compare.py  extract.py  render.py
supabase/functions/moderation-notify/: index.ts
supabase/migrations/: 20260308120000_shift_notes_mvp.sql
tests/: test_smoke.py
web/: README.md  package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/disclaimer/: page.tsx
web/src/app/guidelines/: page.tsx
web/src/app/map/: page.tsx
web/src/app/official-response/: page.tsx
web/src/app/places/: page.tsx
web/src/app/report/: page.tsx
web/src/app/submit/: page.tsx
web/src/app/takedown/: page.tsx
web/src/app/terms/: page.tsx
web/src/components/: admin-login-form.tsx  admin-sign-out-button.tsx  empty-state.tsx  flash-message.tsx  official-response-card.tsx  place-card.tsx  places-map-canvas.tsx  places-map.tsx  review-card.tsx  site-footer.tsx  site-header.tsx  site-shell.tsx  status-badge.tsx
web/src/components/admin/: sign-out-button.tsx
web/src/lib/: actions.ts  admin.ts  audit.ts  auth.ts  constants.ts  demo-data.ts  env.ts  notifications.ts  notify.ts  rate-limit.ts  request.ts  sanitize.ts  text.ts  types.ts  utils.ts  validation.ts
web/src/lib/data/: admin.ts  public.ts
web/src/lib/queries/: admin.ts  public.ts
web/src/lib/supabase/: browser.ts  public.ts  server.ts
(+9 files in other folders)
