[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qai-checker-mini"
version = "0.1.0"
description = "Lightweight document discrepancy checker for numbers, missing sections, and terminology variants."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
qai-checker-mini = "qai_checker_mini.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
